styles.css
/* ... */
.main__content h2 {
    font-size: 4rem;
    background-color: #6f2da8;
    background-image: linear-gradient(to top, #ff0844 0%, #effd5f 100%);
    background-size: 100%;
    -webkit-background-clip: text;
    -moz-background-clip: text;
    -webkit-text-fill-color: transparent;
    -moz-text-fill-color: transparent;
}

.main__content p {
    margin-top: 1rem;
    font-size: 2rem;
    font-weight: 700;
    color: #fff;
}

.main__btn {
    font-size: 1rem;
    background-image: linear-gradient(to top, #6f2da8 0%, #d78fdc 100%);
    padding: 14px 32px;
    border: none;
    border-radius: 4px;
    color: #fff;
    margin-top: 2rem;
    cursor: pointer;
    position: relative;
    transition: all 0.35s;
    outline: none;
}

.main__btn a {
    position: relative;
    z-index: 2;
    color: #fff;
    text-decoration: none;
}

.main__btn:after {
    position: absolute;
    content: '';
    top: 0;
    left: 0;
    width: 0;
    height: 100%;
    background-image: linear-gradient(to top, #ff0844 0%, #effd5f 100%);
    transition: all 0.35s;
    border-radius: 4px;
}

.main__btn:hover {
    color: #fff;
}

.main__btn:hover:after {
    width: 100%;
}

.main__img--container {
    text-align: center;
}

#main__img {
    height: 80%;
    width: 80%;
}

/* MOBILE RESPONSIVENESS */
@media screen and (max-width: 768px) {
    .main__container {
        display: grid;
        grid-template-columns: auto;
        align-items: center;
        justify-self: center;
        width: 100%;
        margin: 0 auto;
        height: 90vh;
    }

    .main__content {
        text-align: center;
        margin-bottom: 4rem;
    }

    .main__content h1 {
        font-size: 2.5rem;
        margin-top: 2rem;
    }

    .main__content h2 {
        font-size: 3rem;
    }

    .main__content p {
        margin-top: 1rem;
        font-size: 1.5rem;
    }

    .about__container {
        display: grid;
        grid-template-columns: auto;
        align-items: center;
        justify-self: center;
        width: 100%;
        margin: 0 auto;
        height: 90vh;
    }

    .about__content {
        text-align: center;
        margin-bottom: 4rem;
    }

    .about__content h1 {
        font-size: 2.5rem;
        margin-top: 2rem;
    }

    .about__content h2 {
        font-size: 3rem;
    }

    .about__content p {
        margin-top: 1rem;
        font-size: 1.5rem;
    }
}

@media screen and (max-width: 480px) {
    .main__content h1 {
        font-size: 2rem;
        margin-top: 3rem;
    }

    .main__content h2 {
        font-size: 2rem;
    }

    .main__content p {
        margin-top: 2rem;
        font-size: 1.5rem;
    }

    .about__content h1 {
        font-size: 2rem;
        margin-top: 3rem;
    }

    .about__content h2 {
        font-size: 2rem;
    }

    .about__content p {
        margin-top: 2rem;
        font-size: 1.5rem;
    }

    .main__btn {
        padding: 12px 36px;
        margin: 2.5rem 0;
    }
}

/* SERVICES */
.services {
    background: #141414;
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 100vh;
}

.services h1 {
    background-color: #6f2da8;
    background-image: linear-gradient(
        to right, 
        #6f2da8 0%,
        #7431aa 0%,
        #8744b4 21%,
        #9a56be 52%,
        #b56fcb 78%,
        #d78fdc 100%
    );
    background-size: 100%;
    margin-bottom: 5rem;
    font-size: 2.5rem;
    -webkit-background-clip: text;
    -moz-background-clip: text;
    -webkit-text-fill-color: transparent;
    -moz-text-fill-color: transparent;
}

.services__container {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}

.services__card {
    margin: 1rem;
    height: 525px;
    width: 400px;
    border-radius: 4px;
    background-image: linear-gradient(
        to bottom, 
        rgba(0, 0, 0, 0) 0%, 
        rgba(17, 17, 17, 0.6) 100%), 
        url('/images/boat.jpg');
    background-size: cover;
    position: relative;
    color: #fff;
}

.services__card:nth-child(2) {
    background-image: linear-gradient(
        to bottom, 
        rgba(0, 0, 0, 0) 0%, 
        rgba(17, 17, 17, 0.6) 100%), 
        url('/images/signs.jpg');
}

.services h2 {
    position: absolute;
    top: 350px;
    left: 30px;
}

.services__card p {
    position: absolute;
    top: 400px;
    left: 30px;
}

.services__card button {
    color: #fff;
    padding: 10px 20px;
    border: none;
    outline: none;
    border-radius: 4px;
    background: #6f2da8;
    position: absolute;
    top: 440px;
    left: 30px;
    font-size: 1rem;
    cursor: pointer;
}

.services__card:hover {
    transform: scale(1.075);
    transition: 0.25s ease-in;
    cursor: pointer;
}

@media screen and (max-width: 960px) {
    .services {
        height: 1600px;
    }

    .services h1 {
        font-size: 2rem;
        margin-top: 12rem;
    }
}
@media screen and (max-width: 480px) {
    .services {
        height: 1400px;
    }

    .services h1 {
        font-size: 1.2rem;
    }

    .services__card {
        width: 300px;
    }
}

/* FOOTER */
.footer__container {
    background-color: #141414;
    padding: 5rem 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#footer__logo {
    color: #fff;
    display: flex;
    align-items: center;
    cursor: pointer;
    text-decoration: none;
    font-size: 2rem;
}

.footer__links {
    width: 100%;
    max-width: 1000px;
    display: flex;
    justify-content: center;
}

.footer__link--wrapper {
    display: flex;
}

.footer__link--items {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    margin: 16px;
    text-align: left;
    width: 160px;
    box-sizing: border-box;
}

.footer__link--items h2 {
    margin-bottom: 16px;
}

.footer__link--items > h2 {
    color: #fff;
}

.footer__link--items a { 
    color: #fff;
    text-decoration: none;
    margin-bottom: 0.5rem;
}
/* ... */

